@@ -11,12 +11,12 @@ my $capb = capb('backup', 'escape');
 $|=1;
 
 # Predefined values:
-my $version           = "=V";
+my $version           = "@abiname@@localversion@";
 my $link_in_boot      = "";
 my $no_symlink        = "";
 my $do_symlink        = "Yes";  # target machine defined
-my $kimage            = "=K";
-my $initrd            = "=I";        # initrd kernel
+my $kimage            = "@image-stem@";
+my $initrd            = "@initramfs@";
 my $mkimage           = "";     # command to generate the initrd image
 my $use_hard_links    = ''; # hardlinks do not work across fs boundaries
 my $postinst_hook     = '';          #Normally we do not
