@@ -7,14 +7,14 @@
 # Even minor modifications require translation updates and such
 # changes should be coordinated with translators and reviewers.
 
-Template: linux-image-=V/postinst/depmod-error-initrd-=V
+Template: linux-image-@abiname@@localversion@/postinst/depmod-error-initrd-@abiname@@localversion@
 Type: boolean
 Default: false
 _Description: Abort installation after depmod error?
  The 'depmod' command exited with the exit code ${exit_value}
  (${SIGNAL}${CORE}).
  .
- Since this image uses initrd, the ${modules_base}/=V/modules.dep file
+ Since this image uses initrd, the ${modules_base}/@abiname@@localversion@/modules.dep file
  will not be deleted, even though it may be invalid.
  .
  You should abort the installation and fix the
@@ -22,7 +22,7 @@ _Description: Abort installation after depmod error?
  modules.dep file. If you don't abort the installation, there is
  a danger that the system will fail to boot.
 
-Template: linux-image-=V/prerm/removing-running-kernel-=V
+Template: linux-image-@abiname@@localversion@/prerm/removing-running-kernel-@abiname@@localversion@
 Type: boolean
 Default: true
 _Description: Abort kernel removal?
@@ -37,7 +37,7 @@ _Description: Abort kernel removal?
  It is highly recommended to abort the kernel removal unless you are
  prepared to fix the system after removal.
 
-Template: linux-image-=V/postinst/missing-firmware-=V
+Template: linux-image-@abiname@@localversion@/postinst/missing-firmware-@abiname@@localversion@
 Type: note
 #flag:translate!:3
 _Description: Required firmware files may be missing
@@ -54,7 +54,7 @@ _Description: Required firmware files may be missing
  firmware files.
 
 # This has not yet been reviewed
-Template: linux-image-=V/postinst/ignoring-ramdisk
+Template: linux-image-@abiname@@localversion@/postinst/ignoring-ramdisk
 Type: error
 _Description: Ramdisk configuration must be updated
  Kernel packages will no longer run a specific ramdisk creator.  The
